# Tabularia

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: test.py  utils.py
backend/app/api/: main.py  models.py  schemas.py
backend/app/api/routes/: db.py  files.py  healthcheck.py  tasks.py
backend/app/config/: config.toml  secrets.toml.example
backend/app/core/: config.py  crypto.py
backend/app/engine/: __init__.py  base.py  cache.py  chdb_engine.py  chdb_ops.py  context.py  dtypes.py  duckdb_engine.py  duckdb_ops.py  exceptions.py  operations.py  polars_engine.py
backend/app/ingest/: __init__.py  converters.py  db_destination.py  db_source.py  formats.py  models.py  s3_destination.py  service.py
backend/app/observability/: metrics.py
backend/app/tasks/: celery_app.py  jobs.py
backend/scripts/: seed_sample.py
backend/tests/: conftest.py  fakes.py  test_cache.py  test_chdb_engine.py  test_db_destination.py  test_db_source.py  test_duckdb_engine.py  test_engine.py  test_operations.py  test_s3_destination.py
frontend/: Dockerfile  app.vue  nuxt.config.ts  (+2 more)
gateway/: Dockerfile  README.md  pyproject.toml
gateway/app/: main.py
gateway/app/core/: config.py  crypto.py  engine_client.py  security.py
gateway/app/db/: seed.py  session.py
gateway/app/models/: __init__.py  audit.py  blob_deletion.py  connection.py  datasource.py  flow.py  flow_version.py  permission.py  project.py  run.py  upload.py  user.py
gateway/app/routes/: audit.py  auth.py  connections.py  datasources.py  flows.py  groups.py  lineage.py  permissions.py  projects.py  proxy.py  queue.py  runs.py  scheduling.py  system.py  users.py
gateway/app/schemas/: models.py
gateway/app/services/: audit.py  blobgc.py  flow_resolver.py  lineage.py  objects.py  orchestrator.py  pagination.py  permissions.py  schedule.py  schedule_load.py  scheduler.py
gateway/tests/: conftest.py  test_blob_lifecycle.py  test_crypto_failclosed.py  test_data_plane_pinning.py  test_flow_engine.py  test_flow_versioning.py  test_pagination.py  test_run_search.py
(+96 files in other folders)
