[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.32",
    "celery>=5.6.3",
    "fastapi>=0.137.1",
    "fastexcel>=0.20.2",
    "polars>=1.41.2",
    "prometheus-fastapi-instrumentator>=8.0.2",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.32",
    "redis>=8.0.0",
    "uvicorn>=0.49.0",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
