[project]
name = "gateway"
version = "0.1.0"
description = "Tabularia control plane: auth, utenti/gruppi, progetti/permessi, proxy verso l'engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.1",
    "uvicorn>=0.49.0",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.9",
    "bcrypt>=4.2.0",
    "pyjwt>=2.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "email-validator>=2.2.0",
    "python-multipart>=0.0.32",
]
